--- a/package/deb/lib/systemd/system/connekt-smtp.service
+++ b/package/deb/lib/systemd/system/connekt-smtp.service
@@ -8,7 +8,8 @@ EnvironmentFile=/etc/default/csmtp
 CapabilityBoundingSet=CAP_NET_BIND_SERVICE
 AmbientCapabilities=CAP_NET_BIND_SERVICE
 ExecStart=/usr/sbin/csmtp /etc/csmtp/credentials.txt
-Restart=on-abnormal
+Restart=on-failure
+RestartSec=5
 ; restrictions
 PrivateDevices=true
 PrivateTmp=true
