--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -44,7 +44,7 @@ jobs:
           key: ${{ runner.os }}-buildx-docker-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-buildx-docker-
-      - name: Build Docker Image for ubuntu
+      - name: Build Docker Image
         uses: docker/build-push-action@v3
         with:
           # push: ${{ github.event_name != 'pull_request' }}
